[tool.poetry]
name = "dsalg"
version = "0.1.0"
description = "DS and Algo"
authors = ["Sumit Kumar"]

[tool.poetry.dependencies]
python = "^3.6.4"
pandas = "^1.0.5"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
black = "^19.10b0"
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
